--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,7 @@ nav a:hover {
 }
 
 .imageBack {
+    display: block;
     position: relative;
     top: 0;
     left: 0;
@@ -103,14 +104,16 @@ nav a:hover {
 }
 
 .imageFore {
+    display: block;
     position: absolute;
     height: 97%;
+    width: 100%;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     margin: auto;
-    width: fit-content;
+    object-fit: contain;
 }
 
 .zoomIcon {
@@ -118,13 +121,17 @@ nav a:hover {
     bottom: 20px;
     right: 20px;
 }
+.labelZoomIcon{
+    position: relative;
+    right: 20px;
+}
 
-.zoomIcon path {
+.zoomIcon path, .labelZoomIcon path {
     transition-duration: 0.2s;
     fill: rgba(255, 255, 255, 0.8);
 }
 
-.zoomIcon:hover path {
+.zoomIcon:hover path, .labelZoomIcon:hover path {
     fill: rgb(58, 58, 58);
 }
 
